# fbchatbot

./: .gitignore  Makefile  README.rst  example.py  pyproject.toml  thoughts.md
docs/source/: conf.py  index.rst
fbchatbot/: __init__.py  chatbot.py  chatbot_manager.py  command.py  core_commands.py  core_events.py  event_listener.py  events_handler.py  fbchatbot.py  plugin.py  types_util.py  util.py
fbchatbot/base_plugin/: __init__.py  listeners.py
patrick/: __init__.py  command.py  core_commands.py  core_events.py  events_handler.py  listeners.py  patrick.py  plugin.py  type_util.py  types_util.py
patrick/base_plugin/: __init__.py  events.py  listeners.py  plugin.py
tests/: test_chatbot.py  test_chatbot_manager.py  test_fbchatbot.py  test_patrick.py
