[tool.poetry]
name = "patrick"
version = "0.1.0"
description = ""
authors = ["Matt Wetmore <wetmore.matt@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
attr = "^0.3.1"
fbchat = "2.0.0a2"

[tool.poetry.dev-dependencies]
pytest = "^4.6"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
