[tool.poetry]
name = "fbchatbot"
version = "0.1.0"
description = "Easily define chatbots for Facebook Messenger"
authors = ["Matthew Wetmore <wetmore.matt@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
attr = "^0.3.1"
fbchat = "2.0.0a2"

[tool.poetry.dev-dependencies]
pytest = "^4.6"
sphinx = "^3.1.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
