[tool.poetry]
name = "fbchatbot"
version = "0.2.0"
description = "Easily define chatbots for Facebook Messenger"
authors = ["Matthew Wetmore <wetmore.matt@gmail.com>"]
readme = "README.rst"

[tool.poetry.dependencies]
python = "^3.8"
attr = "^0.3.1"
fbchat = "2.0.0a2"

[tool.poetry.dev-dependencies]
pytest = "^4.6"
twine = "^3.1.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
